[gd_scene load_steps=17 format=3 uid="uid://dycn3pr4t1xnp"]

[ext_resource type="Texture2D" uid="uid://47xj2ygipps2" path="res://Phone/Assets/red-close-icon-free-png.webp" id="1_iiwj6"]
[ext_resource type="Script" path="res://Achievements/Scripts/achievements.gd" id="1_w7j6g"]
[ext_resource type="Texture2D" uid="uid://mct3bkbp28ne" path="res://Achievements/Assets/451391.webp" id="2_xxo8q"]
[ext_resource type="Texture2D" uid="uid://c37hptd6qotu6" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.11.01 PM.png" id="3_vsw12"]
[ext_resource type="Texture2D" uid="uid://b54y4rn3gadsq" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.11.55 PM.png" id="4_bxvpb"]
[ext_resource type="Texture2D" uid="uid://d3ht3seukeyn3" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.12.06 PM.png" id="5_08nwy"]
[ext_resource type="Texture2D" uid="uid://cnqxh4u8ga86u" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.12.18 PM.png" id="6_85yam"]
[ext_resource type="Texture2D" uid="uid://brawqt750hqw3" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.12.25 PM.png" id="7_6smx4"]
[ext_resource type="Texture2D" uid="uid://bexswxmlkuegu" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.12.42 PM.png" id="8_jbejd"]
[ext_resource type="Texture2D" uid="uid://bifwwupmj8skv" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.12.54 PM.png" id="9_cgmyk"]
[ext_resource type="Texture2D" uid="uid://csail7rrlydpl" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.13.09 PM.png" id="10_mv1sm"]
[ext_resource type="Texture2D" uid="uid://l66558doc01q" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.13.27 PM.png" id="11_lktu0"]
[ext_resource type="Texture2D" uid="uid://cfkr6kij3u8gy" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.13.42 PM.png" id="12_fo34b"]
[ext_resource type="Texture2D" uid="uid://f1f0hyb8aoi" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.14.04 PM.png" id="13_ti7gq"]
[ext_resource type="Texture2D" uid="uid://b4b27b3620mnf" path="res://Achievements/Assets/Screenshot 2025-04-13 at 10.14.35 PM.png" id="14_18v18"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r00ud"]
bg_color = Color(0.693376, 0.590003, 0.300665, 1)

[node name="Achievements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7j6g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 394.0
offset_top = 93.0
offset_right = 862.0
offset_bottom = 569.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r00ud")

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_iiwj6")
ignore_texture_size = true
stretch_mode = 0

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 147.0
offset_right = 467.0
offset_bottom = 203.0

[node name="Panel2" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 92.0
offset_top = 1.0
offset_right = 147.0
offset_bottom = 476.0

[node name="Panel3" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 207.0
offset_right = 262.0
offset_bottom = 475.0

[node name="Panel4" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 322.0
offset_top = 1.0
offset_right = 377.0
offset_bottom = 476.0

[node name="Panel5" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_top = -1.0
offset_right = 32.0
offset_bottom = 474.0

[node name="Panel6" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 436.0
offset_top = -1.0
offset_right = 468.0
offset_bottom = 474.0

[node name="Panel7" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = 283.0
offset_right = 465.0
offset_bottom = 340.0

[node name="Panel8" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = 419.0
offset_right = 464.0
offset_bottom = 476.0

[node name="Panel9" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_top = 11.0
offset_right = 466.0
offset_bottom = 68.0

[node name="Label13" type="Label" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 183.0
offset_top = 10.0
offset_right = 292.0
offset_bottom = 33.0
text = "Acheivements"

[node name="Lock1" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 61.0
offset_right = 113.0
offset_bottom = 154.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect1" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 86.0
offset_right = 92.0
offset_bottom = 146.0
texture = ExtResource("3_vsw12")
expand_mode = 1

[node name="Label1" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 147.0
offset_right = 113.0
offset_bottom = 196.0
text = "Unlocked All 
Trivia"
horizontal_alignment = 1

[node name="Lock2" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 126.0
offset_top = 61.0
offset_right = 228.0
offset_bottom = 154.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 86.0
offset_right = 207.0
offset_bottom = 146.0
texture = ExtResource("4_bxvpb")
expand_mode = 1

[node name="Label2" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 156.0
offset_top = 152.0
offset_right = 197.0
offset_bottom = 175.0
text = "time"

[node name="Lock3" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 241.0
offset_top = 61.0
offset_right = 343.0
offset_bottom = 154.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 86.0
offset_right = 322.0
offset_bottom = 146.0
texture = ExtResource("5_08nwy")
expand_mode = 1

[node name="Label3" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 247.0
offset_top = 147.0
offset_right = 340.0
offset_bottom = 196.0
text = "Half Way To 
Graduation!"

[node name="Lock4" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 356.0
offset_top = 61.0
offset_right = 458.0
offset_bottom = 154.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 378.0
offset_top = 87.0
offset_right = 437.0
offset_bottom = 146.0
texture = ExtResource("6_85yam")
expand_mode = 1

[node name="Label4" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 371.0
offset_top = 147.0
offset_right = 443.0
offset_bottom = 196.0
text = "Collected 
All Items"
horizontal_alignment = 1

[node name="Lock5" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 197.0
offset_right = 113.0
offset_bottom = 290.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 222.0
offset_right = 92.0
offset_bottom = 282.0
texture = ExtResource("7_6smx4")
expand_mode = 1

[node name="Label5" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 284.0
offset_right = 107.0
offset_bottom = 333.0
text = "Took First 
Steps"
horizontal_alignment = 1

[node name="Lock6" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 126.0
offset_top = 197.0
offset_right = 228.0
offset_bottom = 290.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 222.0
offset_right = 207.0
offset_bottom = 282.0
texture = ExtResource("8_jbejd")
expand_mode = 1

[node name="Label6" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 143.0
offset_top = 282.0
offset_right = 212.0
offset_bottom = 331.0
text = "Healed #
Times"
horizontal_alignment = 1

[node name="Lock7" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 241.0
offset_top = 197.0
offset_right = 343.0
offset_bottom = 290.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 222.0
offset_right = 322.0
offset_bottom = 282.0
texture = ExtResource("9_cgmyk")
expand_mode = 1

[node name="Label7" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 254.0
offset_top = 283.0
offset_right = 336.0
offset_bottom = 332.0
text = "Beat 3 
Professors"
horizontal_alignment = 1

[node name="Lock8" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 356.0
offset_top = 197.0
offset_right = 458.0
offset_bottom = 290.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 377.0
offset_top = 222.0
offset_right = 437.0
offset_bottom = 282.0
texture = ExtResource("10_mv1sm")
expand_mode = 1

[node name="Label8" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 363.0
offset_top = 283.0
offset_right = 449.0
offset_bottom = 332.0
text = "Leveled Up
# Times"
horizontal_alignment = 1

[node name="Lock9" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 333.0
offset_right = 113.0
offset_bottom = 426.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect9" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 358.0
offset_right = 92.0
offset_bottom = 418.0
texture = ExtResource("11_lktu0")
expand_mode = 1

[node name="Label9" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = -5.0
offset_top = 418.0
offset_right = 133.0
offset_bottom = 467.0
text = "One semester 
left"
horizontal_alignment = 1

[node name="Lock10" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 126.0
offset_top = 333.0
offset_right = 228.0
offset_bottom = 426.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect10" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 358.0
offset_right = 207.0
offset_bottom = 418.0
texture = ExtResource("12_fo34b")
expand_mode = 1

[node name="Label10" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 156.0
offset_top = 428.0
offset_right = 197.0
offset_bottom = 451.0
text = "ideas"

[node name="Lock11" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 241.0
offset_top = 333.0
offset_right = 343.0
offset_bottom = 426.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect11" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 358.0
offset_right = 322.0
offset_bottom = 418.0
texture = ExtResource("13_ti7gq")
expand_mode = 1

[node name="Label11" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 242.0
offset_top = 419.0
offset_right = 341.0
offset_bottom = 468.0
text = "Maxed Out 2 
Abilities"
horizontal_alignment = 1

[node name="Lock12" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 356.0
offset_top = 333.0
offset_right = 458.0
offset_bottom = 426.0
texture = ExtResource("2_xxo8q")
expand_mode = 1

[node name="TextureRect12" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 377.0
offset_top = 358.0
offset_right = 437.0
offset_bottom = 418.0
texture = ExtResource("14_18v18")
expand_mode = 1

[node name="Label12" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 341.0
offset_top = 417.0
offset_right = 474.0
offset_bottom = 466.0
text = "Met Advisor 
For First Time"
horizontal_alignment = 1
